Fix widget size config loading.
Allow dock logo override via config prop file since css is broken in JavaFX 1.2

--- a/container/src/org/widgetfx/widgetSkinTest.css
+++ b/container/src/org/widgetfx/widgetSkinTest.css
@@ -3,7 +3,7 @@
     faceEndColor: darkred;
     secondHandColor: red;
 }
-"org.widgetfx.ui.Dock" {
+"org.widgetfx.ui.DockSkin" {
     backgroundStartColor: #00000033;
     backgroundEndColor: #00000033;
     showDeviceBar: true;
